syntax = "proto3";

package merlin.transformer;

option go_package = "github.com/caraml-dev/merlin/pkg/transformer/spec";

message PredictionLogConfig {
    bool enable = 1;
    string rawFeaturesTable = 2;
    string entitiesTable = 3;
}